--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -4,16 +4,13 @@
 
 {{#each results}}
 
-<script> const </script>
-
   <div class="mx-auto px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
     <!-- Product -->
     <div class="lg:grid lg:grid-cols-7 lg:grid-rows-1 lg:gap-x-8 lg:gap-y-10 xl:gap-x-16">
       <!-- Product image -->
       <div class="lg:col-span-4 lg:row-end-1">
         <div class="aspect-h-3 aspect-w-4 overflow-hidden rounded-lg bg-gray-100">
-          <img src="/images/{{filename}}" alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles." class="object-cover object-center">
-          <p>{{filename}}</p>
+          <img src="/images/1981-Datsun-B-210.jpg" alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles." class="object-cover object-center">
         </div>
       </div>
 
@@ -50,7 +47,7 @@
           </div>
         </div>
 
-        <p class="mt-6 text-gray-500"> </p>
+        <p class="mt-6 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem facilis rerum inventore atque sequi, distinctio ducimus, saepe itaque voluptatibus quia quo natus eligendi, iste cupiditate.</p>
 
   
 
@@ -118,10 +115,10 @@
     <img class="inline-block h-10 w-10 rounded-full" src="/images/owlsmaincircle.png" alt="">
   </div>
   <div class="min-w-0 flex-1">
-    <form id="review-form" action="/comment" method="POST" class="relative">
+    <form id="review-form" action="/reviews" method="POST" class="relative">
       <div class="overflow-hidden rounded-lg shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-indigo-600">
-        <label for="comment" class="sr-only">Add your Review</label>
-        <textarea rows="3" id="review-input" name="comment" id="comment" class="block w-full resize-none border-0 bg-transparent py-1.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Add your comment..."></textarea>
+        <label for="review-input" class="sr-only">Add your Review</label>
+        <textarea rows="3" id="review-input" name="comment" class="block w-full resize-none border-0 bg-transparent py-1.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Add your comment..."></textarea>
 
         <!-- Spacer element to match the height of the toolbar -->
         <div class="py-2" aria-hidden="true">
@@ -136,7 +133,18 @@
           <!-- 'Customer Reviews' panel, show/hide based on tab state -->
           <div id="tab-panel-reviews" class="-mb-10" aria-labelledby="tab-reviews" role="tabpanel" tabindex="0">
             
-            
+
+            {{!-- TESTING TESTING REVIEW FORM--}}
+            <form id="reviewForm">
+      {{!-- <textarea id="reviewInput" class="mt-4 max-w-none text-gray-500" placeholder="Write a review..."></textarea> --}}
+      {{!-- <button type="submit" class="mt-2 bg-blue-500 text-white rounded px-4 py-2">Submit</button> --}}
+    </form>
+
+    <!-- Reviews section -->
+    <div id="reviewsContainer" class="mt-4"></div>
+
+
+
             <h3 class="sr-only">Customer Reviews</h3>
 
             <div class="flex space-x-4 text-sm text-gray-500">
@@ -144,10 +152,54 @@
                 <img src="/images/owlsmaincircle.png" alt="" class="h-10 w-10 rounded-full bg-gray-100">
               </div>
               <div class="py-10">
-                <h3 class="font-medium text-gray-900">Bird Bird Lorem </h3>
+                <h3 class="font-medium text-gray-900">Bird Bird Lorem</h3>
                 <p><time datetime="2021-07-16">July 16, 2021</time></p>
 
-                <div class="mt-4 flex items-center">
+
+                <div class="flex space-x-4 text-sm text-gray-500">
+  <div class="flex-none py-10">
+    <img src="/images/owlsmaincircle.png" alt="" class="h-10 w-10 rounded-full bg-gray-100">
+  </div>
+  <div class="py-10">
+    <h3 class="font-medium text-gray-900">Bird Bird Lorem</h3>
+    <p><time datetime="2021-07-16">July 16, 2021</time></p>
+
+
+
+
+    <div class="mt-4 flex items-center">
+      <!-- Active: "text-yellow-400", Default: "text-gray-300" -->
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
+      </svg>
+    </div>
+    <p class="sr-only">5 out of 5 stars</p>
+
+    <div class="prose prose-sm mt-4 max-w-none text-gray-500">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quia quisquam quibusdam quis obcaecati quam animi officiis sit sequi vitae.</p>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+              {{!-- ORIGINAL CODE --}}
+                {{!-- <div class="mt-4 flex items-center">
                   <!-- Active: "text-yellow-400", Default: "text-gray-300" -->
                   <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
@@ -168,10 +220,14 @@
                 <p class="sr-only">5 out of 5 stars</p>
 
                 <div class="prose prose-sm mt-4 max-w-none text-gray-500">
-                  <p> {{review1}} {{highlights}} </p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quia quisquam quibusdam quis obcaecati quam animi officiis sit sequi vitae.</p>
                 </div>
               </div>
-            </div>
+            </div> --}}
+
+
+
+
             <div class="flex space-x-4 text-sm text-gray-500">
               <div class="flex-none py-10">
                 <img src="/images/owlsmaincircle.png" alt="" class="h-10 w-10 rounded-full bg-gray-100">
@@ -201,13 +257,13 @@
                 <p class="sr-only">5 out of 5 stars</p>
 
                 <div class="prose prose-sm mt-4 max-w-none text-gray-500">
-                  <p>{{review2}} </p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, voluptatem. Et, impedit explicabo expedita placeat quaerat pariatur repellendus doloribus harum? Iste dignissimos molestiae sed deserunt? Corrupti minus hic vel asperiores, perspiciatis illum! Non, provident. Ducimus illum odio magnam facilis distinctio consectetur repellendus iure eveniet! Aliquam iusto accusamus corporis quod voluptates!</p>
                 </div>
               </div>
             </div>
 
             <!-- More reviews... -->
-          
+          </div>
         </div>
       </div>
     </div>
