--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,7 +4,7 @@
     <div class="px-6 pt-1 lg:px-1">
       <div class="mx-auto max-w-2xl pt-24 text-center sm:pt-40">
         <h2 class="text-4xl font-bold tracking-tight text-owlsearch2 sm:text-6xl">We love Owls</h2>
-        <p class="mt-6 text-lg leading-8">We provide car shoppers with reviews of cars and allow them to leave their own review before they purchase a vehicle.</p>
+        <p class="mt-6 text-lg leading-8 font-semibold">We provide car shoppers with reviews of cars and allow them to leave their own review before they purchase a vehicle.</p>
       </div>
     </div>
 
@@ -13,11 +13,11 @@
       <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-none">
         <div class="grid max-w-xl grid-cols-1 gap-8 text-base leading-7 text-black lg:max-w-none lg:grid-cols-2">
           <div>
-            <p>A Personalized Car Search Site Powered with Real User Feedback. Our goal is to help shoppers find the right car for their lifestyle by making it easy to search a variety of cars and compare vehicles side-by-side without ever leaving the site! We know that people typically make their minds up about a car purchase within 10 seconds, and this inspired us to design a personal shopping experience based on ratings imprinted by those who’ve spent time reading content written by real users reviews.</p>
+            <p class="font-maven">A Personalized Car Search Site Powered with Real User Feedback. Our goal is to help shoppers find the right car for their lifestyle by making it easy to search a variety of cars and compare vehicles side-by-side without ever leaving the site! We know that people typically make their minds up about a car purchase within 10 seconds, and this inspired us to design a personal shopping experience based on ratings imprinted by those who’ve spent time reading content written by real users reviews.</p>
             
           </div>
           <div>
-            <p>wisdom wheelz is a great place for car enthusiast to come together and share their knowledge. Whether you're a gear head, racer, or just like driving cars around the block. This website has it all from forums to events in your area</p>
+            <p class="font-maven">wisdom wheelz is a great place for car enthusiast to come together and share their knowledge. Whether you're a gear head, racer, or just like driving cars around the block. This website has it all from forums to events in your area</p>
             
           </div>
         </div>
@@ -71,7 +71,7 @@
             </svg>
             Take responsibility.
           </dt>
-          <dd class="inline text-black">Doing our part to help out the car enthusiast community safely and with ESGs in mind.</dd>
+          <dd class="inline text-black font-maven">Doing our part to help out the car enthusiast community safely and with ESGs in mind.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="inline text-xl font-semibold text-owltext1">
@@ -80,7 +80,7 @@
             </svg>
             Be supportive.
           </dt>
-          <dd class="inline text-black">Offering world class service from the first to last post.</dd>
+          <dd class="inline text-black font-maven">Offering world class service from the first to last post.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="inline text-xl font-semibold text-owltext1">
@@ -89,7 +89,7 @@
             </svg>
             Always learning.
           </dt>
-          <dd class="inline text-black">Constantly innovating to bring the newest technology at all times, staying ahead of the competition.</dd>
+          <dd class="inline text-black font-maven">Constantly innovating to bring the newest technology at all times, staying ahead of the competition.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="inline text-xl font-semibold text-owltext1">
@@ -98,7 +98,7 @@
             </svg>
             Share everything you know.
           </dt>
-          <dd class="inline text-black">Post, Post, and Post some more! That is our motto and our passion for our project.</dd>
+          <dd class="inline text-black font-maven">Post, Post, and Post some more! That is our motto and our passion for our project.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="inline text-xl font-semibold text-owltext1">
@@ -107,7 +107,7 @@
             </svg>
             Enjoy downtime.
           </dt>
-          <dd class="inline text-black">Touch grass whenever we can is part of our culture.</dd>
+          <dd class="inline text-black font-maven">Touch grass whenever we can is part of our culture.</dd>
         </div>
       </dl>
     </div>
@@ -116,7 +116,7 @@
     <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-40 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h2 class="text-3xl font-bold tracking-tight text-owlsearch2 sm:text-4xl">Our team</h2>
-        <p class="mt-6 text-lg leading-8 text-gray-600">Only superstars are on the team. With 4+ months experience, we have proven ourselves to be above average coders ready to take over the world.</p>
+        <p class="mt-6 text-lg leading-8 text-gray-600 font-maven">Only superstars are on the team. With 4+ months experience, we have proven ourselves to be above average coders ready to take over the world.</p>
       </div>
       <ul role="list" class="mx-auto mt-20 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-14 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3 xl:grid-cols-3">
         <li class="w-9/12 items-center">
