--- a/views/garage.handlebars
+++ b/views/garage.handlebars
@@ -19,7 +19,7 @@
       </dd>
     </div>
     <div class="px-4 py-5 sm:p-6">
-      <dt class="text-base font-normal text-gray-900">Avg. Open Rate</dt>
+      <dt class="text-base font-normal text-gray-900">Amount of Vehicles Reviewed</dt>
       <dd class="mt-1 flex items-baseline justify-between md:block lg:flex">
         <div class="flex items-baseline text-2xl font-semibold text-tealowl2">
           58.16%
@@ -36,11 +36,11 @@
       </dd>
     </div>
     <div class="px-4 py-5 sm:p-6">
-      <dt class="text-base font-normal text-gray-900">Avg. Click Rate</dt>
+      <dt class="text-base font-normal text-gray-900">Avg. Negative Reviews</dt>
       <dd class="mt-1 flex items-baseline justify-between md:block lg:flex">
         <div class="flex items-baseline text-2xl font-semibold text-tealowl2">
-          24.57%
-          <span class="ml-2 text-sm font-medium text-gray-500">from 28.62%</span>
+          1.57%
+          <span class="ml-2 text-sm font-medium text-gray-500">from 0.62%</span>
         </div>
 
         <div class="inline-flex items-baseline rounded-full px-2.5 py-0.5 text-sm font-medium bg-red-100 text-red-800 md:mt-2 lg:mt-0">
