--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,8 +6,7 @@
             </div>
             <p class="text-base font-semibold leading-7 text-owltext1">Get the Owlmobile Review help you need</p>
             <h1 class="mt-10 max-w-lg text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Wheel Wisdom</h1>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Owl you in the market for a new car? Or perhaps you're a passionate automobile aficionado looking to stay updated with the latest industry trends and expert opinions. Look no further! Wheel Wisdom is here to revolutionize your car-buying experience.</p>
-
+            <p class="mt-6 text-lg leading-8 text-gray-600 font-maven">Owl you in the market for a new car? Or perhaps you're a passionate automobile aficionado looking to stay updated with the latest industry trends and expert opinions. Look no further! Wheel Wisdom is here to revolutionize your car-buying experience.</p>
 
 <!-- Search Bar  -->
   <form action="/search1" method="GET" class="flex items-center py-10 mx-auto max-w-2xl text-center">
