--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -18,7 +18,7 @@
           <div class="mt-4">
             <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">{{year}} {{manufacturer}} {{model}}</h1>
             <h2 id="information-heading" class="sr-only">Product information</h2>
-            <p class="mt-2 text-xs text-gray-500" data-vehicle-id="{{this.id}}"><p>Vehicle ID: {{this.id}}</p></p>
+            <p class="mt-2 text-xs text-gray-500" data-vehicle-id="{{this.id}}"><p>Vehicle ID: 0533{{this.id}}</p></p>
           </div>
 
           <div>
