--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
         <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-lg">
           <h2 class="text-base font-semibold leading-7 text-owlsearch2">Join the 6 people reviewing Vehicles!</h2>
           <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">A better platform to review.</p>
-          <p class="mt-6 text-lg leading-8 text-gray-600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</p>
+          <p class="mt-6 text-lg leading-8 font-maven text-gray-600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</p>
           <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
             <div class="relative pl-9">
               <dt class="inline font-semibold text-gray-900">
@@ -15,7 +15,7 @@
                 </svg>
                 Quick Reviews.
               </dt>
-              <dd class="inline">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
+              <dd class="inline font-maven">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
             </div>
             <div class="relative pl-9">
               <dt class="inline font-semibold text-gray-900">
@@ -24,7 +24,7 @@
                 </svg>
                 Lots of Owls.
               </dt>
-              <dd class="inline">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</dd>
+              <dd class="inline font-maven">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</dd>
             </div>
             <div class="relative pl-9">
               <dt class="inline font-semibold text-gray-900">
@@ -34,7 +34,7 @@
                 </svg>
                 Database backups maybe.
               </dt>
-              <dd class="inline">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</dd>
+              <dd class="inline font-maven">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</dd>
             </div>
           </dl>
         </div>
@@ -44,7 +44,7 @@
 <!-- component -->
 <div class="bg-grey-lighter flex flex-col">
 <div class="container max-w-md mx-auto flex-2 flex flex-col items-center justify-top pt-10 px-2">
-    <div class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
+    <div class="bg-white px-6 py-8 rounded-xl shadow-md text-black w-full">
         <h1 class="mb-8 text-3xl text-center">Sign up</h1>
         <input 
             type="text"
@@ -86,7 +86,7 @@
 
     <div class="text-grey-dark mt-6">
         Already have an account? 
-        <a class="no-underline border-b border-blue text-blue" href="../login/">
+        <a class="no-underline border-b border-blue text-tealowl2" href="../login/">
             Log in
         </a>.
     </div>
@@ -94,8 +94,6 @@
 </div>
 
       </div>
-    </div>
-  </div>
 </div>
 
 
