--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -121,7 +121,7 @@
   <script src="/js/logout.js"></script>
   <script src="/js/profiledrop.js"></script>
   {{/if}}
-      <div class="bg-gradient-to-r from-green-100 via-yellow-100 to-green-200">
+      <div class="bg-[radial-gradient(ellipse_at_top_right,_var(--tw-gradient-stops))] from-teal-300 via-yellow-100 to-teal-300">
 
 
 
